added text about multipass limiting and upwind max principle

--- a/doc/dissertation/chapter2.tex
+++ b/doc/dissertation/chapter2.tex
@@ -98,7 +98,11 @@
     \label{sec:antidiffusion_bounds_signs}}
     \input{content/fct/antidiffusion_bounds_signs}
 \subsection{Limiting Coefficients\label{sec:limiting_coefficients_scalar}}
-  \input{content/fct/limiting_coefficients}
+  \input{content/fct/limiting_overview}
+  \subsubsection{Zalesak Limiter\label{sec:zalesak_limiter}}
+    \input{content/fct/zalesak_limiter}
+  \subsubsection{Multi-Pass Limiting\label{sec:multipass_limiting}}
+    \input{content/fct/multipass_limiting}
 %===============================================================================
 \section{FCT Scheme for Systems of Conservation Laws\label{sec:fct_systems}}
 %===============================================================================
