--- a/doc/dissertation/content/appendices/analytic_dmp.tex
+++ b/doc/dissertation/content/appendices/analytic_dmp.tex
@@ -100,7 +100,7 @@ the characteristics are constant.
    \end{multline*}
 \end{proof}
 %================================================================================
-\section{Local Maximum Principles}
+\section{Local Maximum Principles\label{sec:local_max_principles}}
 %================================================================================
 Before giving an analytic local discrete maximum principle, a local maximum
 principle applying to a general region is given by the following theorem.
