added upwind analytic bounds for FE in deal

--- a/doc/dissertation/content/results/transport/void_to_absorber/description.tex
+++ b/doc/dissertation/content/results/transport/void_to_absorber/description.tex
@@ -235,6 +235,9 @@ Equation \eqref{eq:analyticDMP}, are implicit:
         \end{array}\right.\eqp
   \end{equation}
 \end{subequations}
+Note that for this test problem, the source $\scalarsource$ is zero;
+it is included in these expressions for generality.
+
 To illustrate the issue of using implicit solution bounds,
 the problem was run again but with \emph{explicitly}
 computed solution bounds, which use the known exact solution for this problem
